# qc

./: .gitignore  .gitmodules  CMakeLists.txt  boxes.py  cart2sph.py  class.py  configlexer.py  constants.py  contour.py  examplejt.py  examplelaplacian3D.py  gammafunctional.py  hydrogen.py  hydrogenanalytic.py  hydrogenpsi.py  laplacian3Dnumpy.py  notes  plotvolume.wls  potentialnumpy.py  raster.py  readme.txt  requirements.txt  setup.py
.SpaceVim.d/: init.toml
.SpaceVim.d/autoload/: myspacevim.vim
database/: constants.db  constants.sqbpro
qc/: class.py  contour.py  hydrogenhnumpy.py  hydrogenpsi.py  laplacian3d.py  raster.py
src/: main.py
src/data/: visualize.py
src/data_structure/: surface.py  texturescratch.py  util_cub.py
src/demo/: atomic_orbital.py  laplacian_visualisation.py  simple_hydrogen_testbench.py
src/goal/: rayleigh_constrained.py  rayleigh_quotient.py  wavefunction.py
src/hamiltonian/: hamiltonian.py  laplacian3d.py  potential.py
src/psi/: hydrogenpsi.py
src/qc/: boxes.py  cart2sph.py  configlexer.py  configparser.py  constants.py  cupyscratch.py  examplejt.py  hydrogen.py  hydrogen_numerical.py  hydrogenh.py  hydrogenh_energy_numerical.py  hydrogenpsi.py  laplacian3d.py  lobpcg.py  main.py  potential.py  potentialnumpy.py  raster.py  surface.py  testso.py  texture.py  texturescratch.py  wolframtest.py
src/solver/: adam.py  ex.py  ex2.py  excited_hydrogen_adam.py  ground_state_adam.py  ground_state_gradient_descent.py  lobpcg.py  run.sh  (+4 more)
tests/: hydrogenh_test.py  laplacian3d_test.py  parser_test.py  potential_test.py  psi_test.py
(+27 files in other folders)
